--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongodb": "^4.1.0",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
