--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.9.2",
+    "@nextui-org/react": "^1.0.0-beta.10",
     "mongodb": "^4.1.0",
     "next": "11.1.0",
     "react": "17.0.2",
+    "react-aria": "^3.21.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.6.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint-config-next": "11.1.0",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
