--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 MONGODB_URI = "mongodb+srv://ekillalea:Cuddles00@clubcluster.phertpf.mongodb.net/?retryWrites=true&w=majority"
-DB_NAME= "sample_posts"
+DB_NAME= "club_students"
 
 DEV_URL = "http://localhost:3000"
 PROD_URL = ""
