--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@progress/kendo-react-scheduler": "^5.9.0",
     "@progress/kendo-react-treeview": "^5.9.0",
     "@progress/kendo-theme-default": "^5.11.0",
+    "@react-icons/all-files": "^4.1.0",
     "mongodb": "^4.1.0",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-aria": "^3.21.0",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.6.0"
+    "react-burger-menu": "^3.0.8",
+    "react-calendar": "^4.0.0",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
