--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-blog-app-with-mongodb",
+  "name": "nextjs-fyp-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,25 +14,10 @@
     "@devexpress/dx-react-scheduler": "^3.0.6",
     "@devexpress/dx-react-scheduler-material-ui": "^3.0.6",
     "@nextui-org/react": "^1.0.0-beta.10",
-    "@progress/kendo-date-math": "^1.5.9",
-    "@progress/kendo-drawing": "^1.17.2",
-    "@progress/kendo-licensing": "^1.2.2",
-    "@progress/kendo-react-animation": "^5.9.0",
-    "@progress/kendo-react-buttons": "^5.9.0",
-    "@progress/kendo-react-common": "^5.9.0",
-    "@progress/kendo-react-dateinputs": "^5.9.0",
-    "@progress/kendo-react-dialogs": "^5.9.0",
-    "@progress/kendo-react-dropdowns": "^5.9.0",
-    "@progress/kendo-react-form": "^5.9.0",
-    "@progress/kendo-react-inputs": "^5.9.0",
-    "@progress/kendo-react-intl": "^5.9.0",
-    "@progress/kendo-react-popup": "^5.9.0",
-    "@progress/kendo-react-scheduler": "^5.9.0",
-    "@progress/kendo-react-treeview": "^5.9.0",
-    "@progress/kendo-theme-default": "^5.11.0",
     "@react-icons/all-files": "^4.1.0",
     "mongodb": "^4.1.0",
-    "next": "11.1.0",
+    "next": "12.2.5",
+    "next-auth": "^4.19.2",
     "react": "17.0.2",
     "react-aria": "^3.21.0",
     "react-burger-menu": "^3.0.8",
