--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-blog-app-with-mongodb",
+  "name": "nextjs-fyp-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,34 +10,17 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.2",
-    "@devexpress/dx-react-core": "^3.0.6",
-    "@devexpress/dx-react-scheduler": "^3.0.6",
-    "@devexpress/dx-react-scheduler-material-ui": "^3.0.6",
     "@nextui-org/react": "^1.0.0-beta.10",
-    "@progress/kendo-date-math": "^1.5.9",
-    "@progress/kendo-drawing": "^1.17.2",
-    "@progress/kendo-licensing": "^1.2.2",
-    "@progress/kendo-react-animation": "^5.9.0",
-    "@progress/kendo-react-buttons": "^5.9.0",
-    "@progress/kendo-react-common": "^5.9.0",
-    "@progress/kendo-react-dateinputs": "^5.9.0",
-    "@progress/kendo-react-dialogs": "^5.9.0",
-    "@progress/kendo-react-dropdowns": "^5.9.0",
-    "@progress/kendo-react-form": "^5.9.0",
-    "@progress/kendo-react-inputs": "^5.9.0",
-    "@progress/kendo-react-intl": "^5.9.0",
-    "@progress/kendo-react-popup": "^5.9.0",
-    "@progress/kendo-react-scheduler": "^5.9.0",
-    "@progress/kendo-react-treeview": "^5.9.0",
-    "@progress/kendo-theme-default": "^5.11.0",
-    "@react-icons/all-files": "^4.1.0",
     "mongodb": "^4.1.0",
-    "next": "11.1.0",
+    "mongoose": "^7.0.1",
+    "next": "12.2.5",
+    "next-auth": "^4.19.2",
     "react": "17.0.2",
     "react-aria": "^3.21.0",
-    "react-burger-menu": "^3.0.8",
     "react-calendar": "^4.0.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.8.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
