--- a/package.json
+++ b/package.json
@@ -10,19 +10,17 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.2",
-    "@devexpress/dx-react-core": "^3.0.6",
-    "@devexpress/dx-react-scheduler": "^3.0.6",
-    "@devexpress/dx-react-scheduler-material-ui": "^3.0.6",
     "@nextui-org/react": "^1.0.0-beta.10",
-    "@react-icons/all-files": "^4.1.0",
     "mongodb": "^4.1.0",
+    "mongoose": "^7.0.1",
     "next": "12.2.5",
     "next-auth": "^4.19.2",
     "react": "17.0.2",
     "react-aria": "^3.21.0",
-    "react-burger-menu": "^3.0.8",
     "react-calendar": "^4.0.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.8.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
