--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react": "17.0.2",
     "react-aria": "^3.21.0",
     "react-calendar": "^4.0.0",
+    "react-calendar-heatmap": "^1.9.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.8.0",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "react-tooltip": "^5.11.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
