--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.8.0",
     "react-table": "^7.8.0",
-    "react-tooltip": "^5.11.1"
+    "react-tooltip": "^5.11.1",
+    "swr": "^2.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
